[gd_scene load_steps=13 format=3 uid="uid://y2yghb7hi3sn"]

[ext_resource type="Texture2D" uid="uid://doo7wyyrxw67o" path="res://Sprite Pack 2/4 - Robo Pumpkin/Walking (16 x 16).png" id="1_t4s2s"]
[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_vwiqf"]
[ext_resource type="Texture2D" uid="uid://cwmvfc1hv1n5b" path="res://Sprite Pack 2/4 - Robo Pumpkin/Hurt (16 x 16).png" id="3_rlo6u"]
[ext_resource type="Texture2D" uid="uid://cpbx1o5djrx7i" path="res://Sprite Pack 2/4 - Robo Pumpkin/Standing (16 x 16).png" id="4_pj8bx"]
[ext_resource type="PackedScene" uid="uid://rf3q7tnyjs3i" path="res://prefabs/hitbox.tscn" id="5_0rk5t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pqb40"]
radius = 4.0
height = 14.0

[sub_resource type="Animation" id="Animation_1ls2q"]
resource_name = "Hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rlo6u")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_emtk2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_t4s2s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fnivf"]
resource_name = "Standing"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_pj8bx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2demi"]
resource_name = "Walk"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_t4s2s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v3a7e"]
_data = {
"Hurt": SubResource("Animation_1ls2q"),
"RESET": SubResource("Animation_emtk2"),
"Standing": SubResource("Animation_fnivf"),
"Walk": SubResource("Animation_2demi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_da4jk"]
size = Vector2(8, 2)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_vwiqf")

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_t4s2s")
hframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pqb40")

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "Walk"
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_v3a7e")
}

[node name="Wall_Detector" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-8, 0)
collision_mask = 6

[node name="hitbox" parent="." instance=ExtResource("5_0rk5t")]

[node name="Collision2" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_da4jk")

[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
[connection signal="animation_started" from="Anim" to="." method="_on_anim_animation_started"]
